# autointerp

./: .gitignore  GIT_COMMIT_INSTRUCTIONS.md  README.md  push_changes.sh  pyproject.toml  sync_with_git.sh
Addtional/: GENERIC_SYSTEM_README.md  MULTI_LAYER_README.md  QUICK_START.md  example_usage.py
Addtional/archive/autointerp_full_local/: PROMPT_CONFIG_README.md  analyze_feature_activations.py  prompts_finance.yaml  pyproject.toml  run_nemotron_local.sh
Addtional/archive/autointerp_full_local/autointerp_full_local/: __main__.py  config.py  utils.py
Addtional/archive/autointerp_full_local/autointerp_full_local/explainers/default/: prompts.py
Addtional/archive/autointerp_full_local/autointerp_full_local/latents/: loader.py
Addtional/archive/autointerp_full_local/data/: finance_tokens.txt
InterpUseCases_autointerp/: .gitignore  STRUCTURE_OVERVIEW.md  consolidate_labels.py  generic_comparison.py  generic_delphi_runner.py  generic_feature_analysis.py  generic_feature_labeling.py  generic_master_script.py  multi_layer_financial_analysis.py  run_financial_analysis.py
archive/: RESTRUCTURE_SUMMARY.md
autointerp_advanced/: run_test_pipeline.py
autointerp_domain_features/: .gitignore  compute_score.py  start_vllm_server.sh
autointerp_full/: .gitignore  README.md  analyze_explanation_vs_tokens.py  convert_goodfire_sae.py  create_explanation_analysis_summary.py  create_simple_explanation.py  debug_explainer_prompt.py  deep_analyze_explanation.py  example_LLM_API.sh  example_LLM_offline.sh  explain_explainer_input.py  extract_top_sentences.py  generate_nemotron_enhanced_csv.py  generate_results_csv.py  llama31_8b_top10_finance_results_summary_enhanced.csv  prompts.yaml  prompts_finance.yaml  run_finbert.sh  run_llama_all.sh  run_llama_all_finance_features_50.sh  run_llama_features.sh  run_llama_features_10.sh  run_nemotron.sh  run_nemotron_system.sh  show_explainer_input.py  show_explainer_input_simple.py  show_top_tokens.py  test_prompt_loading.py
autointerp_full_finance/: example_LLM_offline.sh  logs_autointerp-1760389156643.txt
autointerp_full_finance_optimized/: OPTIMIZATION_README.md  run_nemotron_finance_news_autointerp.sh
autointerp_full_reasoning/: example_vllm.sh  generate_enhanced_results_csv.py  generate_nemotron_enhanced_csv.py  generate_results_csv.py  pyproject.toml
autointerp_lite/: README.md  example_usage.sh  feature_activation_analyzer.py  financial_texts.txt  general_texts.txt  run_analysis.py
autointerp_lite_plus/: financial_texts.txt  run_analysis_with_table.sh
autointerp_saeeval/: .gitignore  COMPARISON_ANALYSIS.md  README.md  TOP_ACTIVATING_EXAMPLES.md  run_autointerp_features.py  run_autointerp_features_vllm_finbert.py  run_nemotron_finance.py  run_nemotron_top100_finance_eval.py  run_nemotron_vllm.py  start_vllm_server_72b.sh
autointerp_steer/: README.md  README.md_old  example_interpretation.sh  large_sae_interpretations.json  llm_clients.py  requirements.txt  run_large_sae_steer_interpret_finance.sh
feature_search/: .gitignore  README.md  finance_vocab.txt  label_features.py
feature_search_backup/: README.md  collect_activating_sentences.py
search_autointerp/: README.md  REORGANIZATION_SUMMARY.md  USAGE.md  finbert_detailed_labels.csv  llama_detailed_labels.csv  llama_finance_feature.csv  nemotron_finance_detailed_labels.csv  pipeline.py  run_all_finbert.sh  (+4 more)
(+1866 files in other folders)
